# tripledeck

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
core/: Cargo.toml
core/src/: filter.rs  lib.rs
program/: Cargo.toml  test.sql
program/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
webapp/: Cargo.toml  client.css  client.js  database.js  docker.sh  index.html  index.js  package-lock.json  package.json  webpack.config.js
webapp/src/: lib.rs
