[package]
name = "tripledeck_core"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Core component of tripledeck"
homepage = "https://gitlab.com/remram44/tripledeck"
repository = "https://gitlab.com/remram44/tripledeck"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["v4", "serde", "wasm-bindgen"] }
