[package]
name = "tripledeck_wasm"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "WASM binding of tripledeck"
homepage = "https://gitlab.com/remram44/tripledeck"
repository = "https://gitlab.com/remram44/tripledeck"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.tripledeck_core]
path = "../core"
