[package]
name = "tripledeck_wasm"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "WASM binding of tripledeck"
homepage = "https://gitlab.com/remram44/tripledeck"
repository = "https://gitlab.com/remram44/tripledeck"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.1"
js-sys = "0.3"
uuid = "0.7"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.3"

tripledeck_core = { path = "../core" }

[patch.crates-io]
# Necessary until 0.2.38 gets released with #1275
"wasm-bindgen" = { git = "https://github.com/rustwasm/wasm-bindgen.git" }
